<resources>
    <string name="app_name">Metro Express</string>
    <string name="ret_hint_username">Username</string>
    <string name="ret_hint_password">Password</string>
    <string name="ret_button_next">Next</string>
    <string name="ret_button_cancel">Cancel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="checkout">CheckOut</string>
    <string name="settings">Settings</string>
    <string name="offer_banner">"Shop for 2000 to get Rs 100 discount and shop for 3000 to get Rs 200 discount"</string>


    <string name="address_value">Teesside University Middlesbrough, United Kingdome</string>
    <string name="address">Address</string>
    <string name="location">Location</string>
    <string name="middlesbrough">Middlesbrough</string>
    <string name="email_developer_">Email Developer:</string>
    <string name="similar_product">You may also like</string>
</resources>